--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,15 +33,19 @@
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-empty-function": "off",
     "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/no-use-before-define": [
       "error"
     ],
     "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
     "import/prefer-default-export": "off",
+    "react/require-default-props": "off",
     "react/react-in-jsx-scope": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/prop-types": "off",
+    "react/jsx-no-bind": "off",
     "react/jsx-props-no-spreading": "off",
     "react/jsx-one-expression-per-line": "off",
     "react/jsx-filename-extension": [
